--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/validator": "^13.15.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
