--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongoose": "^8.15.2",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
